~Fixed some code issues with adding LightSources with the LightManager to some machines.
~Added a more straightforward way to add light sources on CustomObjects
~Added LightSources to BatteryGenerators and CharcoalKilns.
~Fixed a glitch where Charcoal Kilns would work as long as a single piece of wood was provided.

~~~~~~~~~~~~0.0.1 Revitalize 12-08-2022 xx.xx P.M~~~~~~~~~~~~~~
~Fixed SDV revitalize tool to generate c# vars as const and not static
+Added in proper graphics for burner generator
+Added in nuclear generators
+Added in smoke effects for when charcoal kilns work
~Changed charcoal kiln sound effects to match the base game.

~~~~~~~~~~~~0.0.1 Revitalize 12-08-2022 xx.xx P.M~~~~~~~~~~~~~~
~Renamed the ItemIds folder to be Ids for future use cases.
    ~This means the SDV Revitalize tool also had some string values update accordingly as well.
+Added in the BurnerGenerator code and a placeholder graphic in the meantime.

~~~~~~~~~~~~0.0.1 Revitalize 11-24-2022 xx.xx P.M~~~~~~~~~~~~~~
+Added in Advanced, Delux, and Superior Charcoal kilns that turn wood into coal and better rates. Unlocked with higher forging levels and by collecting golden walnuts. Sold by Clint.
~Fixed a glitch where Geode crushers were always consuming fuel charges, this consuming more fuel items even when not operating.
+Cleaned up some code related to machines to make it easier to understand the flow as well as to interface for automate compatibility.
+Added automate compatibility for the geode crushers
+Added automate compatibilityb for the charcoal kilns
~Rewrote much of the logic related to automatce compatibility in the compatibility mod to be able to much easier add compatibility at least for new machines, in the future.
+Added in automate compatibility for the mining drill.
+Added in automate compatibility for ResoruceBushes
~Rewrote some code on ResourceBushes to support Automate compatibility.
~Added new draw methods to choose whether or not to draw the held object for an item.
