@@ -1,0 +1,10 @@
+{
+	"mailTitle":"Revitalize.UnlockNewStuffWithoutNPCMail.Machines.NuclearBatteryGenerator",
+	"message":"@, ^We are aware of some of the changes into the structure of the mine there near Pelican Town and we wish you the best with your exploration there. Please make sure to take plenty of food and we hope these schematics for a new type of generator can aid you in your endeavors.^ -Miner's Guild, Gem Sea Branch",
+	"itemReference":{
+		"stardewValleyItemId": "NULL",
+		"stardewValleyBigCraftableId": "NULL",
+		"registeredObjectId": "Revitalize.Objects.Crafting.Blueprint.Workbench.Machines.EnergyGeneration.NuclearGenerator",
+		"amount": 1
+	},
+}
